@@ -11,6 +11,12 @@
 	* ld-tic6x/shlib-app-1rb.rd: Likewise.
 	* ld-tic6x/shlib-noindex.rd: Likewise.
 
+2015-04-07  Nick Clifton  <nickc@redhat.com>
+
+	* ld-elf/orphan-5.l: New test - checks the linker's output with
+	--warn-orphan enabled.
+	* ld-elf/elf.exp: Run the new test.
+
 2015-04-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-elf/compress.exp: Remove is_zlib_supported check.
